--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://www.notkiller.moe
+url: https://www.notkiller.moe
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
